[package]
name = "ft-lockup"
version = "1.0.0"
authors = ["Eugene The Dream <ek@proximity.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = { version = "1.5.1", features = ["borsh-derive"] }
near-sdk = { version = "5.1.0"}
near-contract-standards = "5.1.0"
[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
